# face_detector

./: CMakeLists.txt  main.cpp
frame_lib/: CMakeLists.txt  frame_processor.cpp  frame_processor.h  frame_processor.hpp  grabber.cpp  grabber.h  grabber.hpp  manager.cpp  manager.hpp  thread_queue.hpp
